# xblocks-core

./: Makefile  pyproject.toml  tox.ini
.github/workflows/: python-tests.yml  release.yml  upgrade-python-requirements.yml
xblocks_contrib/video/tests/: test_studio_metadata_mixin.py
